--- a/style.css
+++ b/style.css
@@ -325,154 +325,70 @@ ol, ul {
 
 
 
-/*
- * BOOTSTRAP
- */
-.container{
-    border: none;
-}
-.panel-footer{
-    background:#fff;
-}
-.btn{
-    border-radius: 1px;
-}
-.btn-sm, .btn-group-sm > .btn{
-    border-radius: 1px;
-}
-.input-sm, .form-horizontal .form-group-sm .form-control{
-    border-radius: 1px;
-}
-
-.panel-info {
-    border-color: #999;
-}
-
-.panel-heading {
-    border-top-left-radius: 1px;
-    border-top-right-radius: 1px;
-}
-.panel {
-    border-radius: 1px;
-}
-.panel-info > .panel-heading {
-    color: #eee;
-    border-color: #999;
-}
-.panel-info > .panel-heading {
-    background-image: linear-gradient(to bottom, #555 0px, #888 100%);
-}
-
-hr {
-    border-color: #999 -moz-use-text-color -moz-use-text-color;
-}
-
-.panel-footer {
-    border-bottom-left-radius: 1px;
-    border-bottom-right-radius: 1px;
-    border-top: 1px solid #999;
-}
-
-.btn-link {
-    color: #888;
-}
-
-hr{
-    margin-bottom: 10px;
-    margin-top: 10px;
-}
-
-/** MEDIA QUERIES **/
-@media only screen and (max-width: 989px){
-    .span1{
-        margin-bottom: 15px;
-        clear:both;
-    }
-}
-
-@media only screen and (max-width: 764px){
-    .inverse-1{
-        float:right;
-    }
-}
-
-@media only screen and (max-width: 586px){
-    .cart-titles{
-        display:none;
-    }
-    .panel {
-        margin-bottom: 1px;
-    }
-}
-
-.form-control {
-    border-radius: 1px;
-}
-
-@media only screen and (max-width: 486px){
-    .col-xss-12{
-        width:100%;
-    }
-    .cart-img-show{
-        display: none;
-    }
-    .btn-submit-fix{
-        width:100%;
-    }
-    
-}
-/*
-@media only screen and (max-width: 777px){
-    .container{
-        overflow-x: hidden;
-    }
-}*/
-@font-face {
-    font-family: monospace;
-    src: url(sansation_light.woff);
- }
- 
- * {
-    font-family: monospace;
- }
 
 
- html, body {
-    height:100%;
-    margin:0;
-    padding:0;
-    }
-    .carousel, .item, .active {
-    height:100%;
-    }
-    .carousel-inner {
-    height:100%;
-    }
-    .carousel {
-    margin-bottom: 60px;
-    }
-    .carousel-caption {
-    z-index: 10;
-    }
-    .carousel .item {
-    background-color: #777;
-    }
-    .carousel .carousel-inner .bg {
-    background-repeat:no-repeat;
-    background-size:cover;
-    }
-    .carousel .carousel-inner .bg1 {
-    background-image:url('https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Memento_Mori%21_%2819496674796%29.jpg/640px-Memento_Mori%21_%2819496674796%29.jpg');
-    background-position: center top;
-    }
-    .carousel .carousel-inner .bg2 {
-    background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/158072/hearthand.jpg');
-    background-position: center center;
-    }
-    .carousel .carousel-inner .bg3 {
-    background-image:url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/158072/woman-camera.jpg');
-    background-position: center bottom;
-    }
+  
+  section.awSlider .carousel{
+    display:table;
+    z-index:2;
+    -moz-box-shadow: 0 0 4px #444;
+      -webkit-box-shadow: 0 0 4px #444;
+      box-shadow: 0 0 15px rgba(1,1,1,.5);
+  }
+  
+  section.awSlider{
+    margin:30px auto;
+    padding:30px;
+    position:relative;
+    display:table;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  section.awSlider:hover > img{
+    -ms-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    opacity:1;
+  }
+  
+  section.awSlider img{
+     pointer-events: none;
+  }
+  
+  section.awSlider > img{
+    position:absolute;
+    top:30px;
+    z-index:1;
+    transition:all .3s;
+    filter: blur(1.8vw);
+    -webkit-filter: blur(2vw);
+    -moz-filter: blur(2vw); 
+    -o-filter: blur(2vw); 
+    -ms-filter: blur(2vw);
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    opacity:.5;
+  }
 
 
-
+  #page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+  }
+  
+  #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+  }
