--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
     }
 }
 footer {
-    background-color: #555;
+    background-color: rgb(17, 16, 16);
     color: white;
     padding: 15px;
   }
@@ -376,19 +376,6 @@ ol, ul {
     opacity:.5;
   }
 
-
-  #page-container {
-    position: relative;
-    min-height: 100vh;
-  }
-  
-  #content-wrap {
-    padding-bottom: 2.5rem;    /* Footer height */
-  }
-  
-  #footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;            /* Footer height */
+  body {
+    font-family: 'Oswald', Arial, Helvetica, sans-serif !important;
   }
